# unique_benchmarking

./: .gitignore  README.md  pyproject.toml  run.sh  setup.sh
templates/: base_report.html  enhanced_summary.html
unique_benchmarking/: app.py  cli.py  config.py  experiment_executor.py  experiment_report_template.html  experiment_summary_template.j2  markdown_template.j2  schemas.py  utils.py
unique_benchmarking/components/: __init__.py  experiment_explorer.py  experiment_runner.py  experiment_summary_render.py  main_content.py  sidebar.py
unique_benchmarking/experiments/: example_usage.py  manage.py
unique_benchmarking/experiments/eval_assistants/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
unique_benchmarking/experiments/eval_assistants/migrations/: 0001_initial.py  0002_configuration.py  0003_assistantresponse_debug_info.py  0004_assistantresponse_chat_id.py  0005_alter_assistantresponse_chat_id.py  0006_alter_assistantresponse_unique_together_and_more.py  0007_assistantresponse_processed_answer.py  0008_goldenanswer_success.py  0009_experiment_completed_tasks_experiment_current_step_and_more.py  0010_alter_assistantresponse_unique_together.py  0011_alter_assistantresponse_unique_together.py
unique_benchmarking/experiments/experiments/: asgi.py  settings.py  urls.py  wsgi.py
unique_benchmarking/frontend/: main.py
unique_benchmarking/frontend/components/: experiment_manager.py  experiment_runner.py  sidebar.py
unique_benchmarking/frontend/utils/: api_client.py  report_generator.py
(+2 files in other folders)
