[tool.poetry]
name = "unique-benchmarking"
version = "0.1.0"
description = ""
authors = ["ThePhilAz <rami.azouz@philico.com>"]
readme = "README.md"
packages = [{include = "unique_benchmarking"}]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
django = "^5.2.6"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.5.0"
streamlit = "^1.39.0"
requests = "^2.32.3"
unique-toolkit = "^1.1.1"
ruff = "^0.13.1"
unique-sdk = "^0.10.24"
openai = "1.106.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
